--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -29,6 +29,7 @@ dd {
 /* Set core root defaults */
 html {
   scroll-behavior: smooth;
+  scroll-padding-top: 180px;
 }
 
 /* Set core body defaults */
