--- a/src/sass/module/_page-top-button.scss
+++ b/src/sass/module/_page-top-button.scss
@@ -1,22 +1,23 @@
 @use "global" as *;
 
 .page-top-button {
-     position: fixed;
-     z-index: 100;
-     right: rem(15);
-     bottom: rem(20);
-     width: rem(48);
-     height: rem(48);
-     cursor: pointer;
-     background-color: $white;
-     border: rem(1) solid $green-accent;
-     border-radius: rem(90);
-     filter: drop-shadow(0px 4px 4px rgba(0,0,0,0.2));
-     @include mq(md){
-         width: rem(80);
-         height: rem(80);
-         right: rem(20);
-     }
+    position: fixed;
+    z-index: 100;
+    right: rem(15);
+    bottom: rem(20);
+    width: rem(48);
+    height: rem(48);
+    cursor: pointer;
+    background-color: $white;
+    border: rem(1) solid $green-accent;
+    border-radius: rem(90);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.2));
+
+    @include mq(md) {
+        width: rem(80);
+        height: rem(80);
+        right: rem(20);
+    }
 }
 
 .page-top-button::after {
@@ -29,7 +30,8 @@
     border-top: rem(1) solid $green-accent;
     transform: skewY(-45deg);
     content: "";
-    @include mq(md){
+
+    @include mq(md) {
         height: rem(40);
         width: rem(10);
         left: 40%;
@@ -39,4 +41,4 @@
 
 .js-page-top {
     display: none;
-  }
+}
