--- a/src/sass/module/_pagenavi.scss
+++ b/src/sass/module/_pagenavi.scss
@@ -50,7 +50,7 @@
 }
 
 .previouspostslink::before,
-.nextpostslink::before{
+.nextpostslink::before {
     content: '';
     width: rem(10);
     height: rem(10);
@@ -60,7 +60,7 @@
     transition: all 0.3s ease;
 }
 
-.previouspostslink::before{
+.previouspostslink::before {
     top: rem(13);
     right: rem(10);
     transform: rotate(-135deg);
@@ -77,16 +77,17 @@
 }
 
 @media (any-hover: hover) {
+
     .previouspostslink:hover::before,
     .nextpostslink:hover::before {
-        border-top-color: $white; /* ボーダーの色を変える */
+        border-top-color: $white;
         border-right-color: $white;
         opacity: 1;
     }
 }
 
 @media screen and (max-width: 768px) {
-    /* SP表示時に数字の「5」と「6」を非表示にする */
+
     .wp-pagenavi .page:nth-of-type(5),
     .wp-pagenavi .page:nth-of-type(6) {
         display: none;
