--- a/src/sass/module/_voice.scss
+++ b/src/sass/module/_voice.scss
@@ -1,14 +1,13 @@
 @use "global" as *;
 
-
 .voice {
-    @include mq(md){
+    @include mq(md) {
         position: relative;
     }
 }
 
 .voice::after {
-    @include mq(md){
+    @include mq(md) {
         content: "";
         display: block;
         background-image: url(../images/common/fish_2.png);
@@ -16,14 +15,15 @@
         background-repeat: no-repeat;
         background-size: cover;
         top: rem(-120);
-        left: calc(50% - min(48vw,rem(621)));
+        left: calc(50% - min(48vw, rem(621)));
         width: rem(301);
         height: rem(138);
     }
 }
 
 .voice::before {
-    @include mq(md){display: block;
+    @include mq(md) {
+        display: block;
         content: "";
         background-image: url(../images/common/tatunootoshigo.png);
         position: absolute;
@@ -31,7 +31,7 @@
         background-size: cover;
         position: absolute;
         bottom: rem(-71);
-        right: calc(50% - min(48vw,rem(540)));
+        right: calc(50% - min(48vw, rem(540)));
         width: rem(71);
         height: rem(162);
     }
@@ -39,7 +39,8 @@
 
 .voice__contents {
     margin-top: rem(44);
-    @include mq(md){
+
+    @include mq(md) {
         margin-top: rem(35);
     }
 }
@@ -49,16 +50,16 @@
     gap: rem(38);
     grid-template-columns: repeat(1, 1fr);
     place-items: center;
-    @include mq(md){
+
+    @include mq(md) {
         grid-template-columns: repeat(2, 1fr);
     }
-
 }
 
 .voice__btn {
     margin-top: rem(39);
-    @include mq(md){
+
+    @include mq(md) {
         margin-top: rem(81);
     }
 }
-
