--- a/src/sass/module/_button.scss
+++ b/src/sass/module/_button.scss
@@ -19,6 +19,7 @@
     z-index: 1;
     font-size: rem(14);
     font-family: $third-font-family;
+    line-height: calc(22 / 14);
 }
 
 .button--layout {
