--- a/src/sass/module/_campaign-card.scss
+++ b/src/sass/module/_campaign-card.scss
@@ -49,7 +49,8 @@
     padding: rem(3) rem(11);
 
     @include mq(md) {
-        padding: rem(6) rem(16);
+        padding: rem(6) rem(15.5);
+
     }
 }
 
@@ -87,6 +88,11 @@
         margin-right: rem(16);
         font-size: rem(16);
         line-height: calc(24/16);
+    }
+}
+.campaign-card__text--layout {
+    @include mq(md){
+       margin-top: rem(23);
     }
 }
 
@@ -149,6 +155,11 @@
 .campaign-card__meta {
     text-align: center;
     margin-top: rem(32);
+    @include mq(md){
+       margin-top: rem(30);
+       text-indent: rem(-14);
+    }
+
 }
 .campaign-card__meta,
 .campaign-card__meta time {
@@ -172,6 +183,10 @@
     color: $green-accent;
     line-height: calc(18 / 14);
     margin-top: rem(5);
+    @include mq(md){
+       text-indent: 0;
+       margin-top: rem(8);
+    }
 }
 
 .campaign-card__apply {
