--- a/src/sass/module/_page-blog.scss
+++ b/src/sass/module/_page-blog.scss
@@ -13,7 +13,7 @@
     width: rem(120);
     height: rem(55);
     top: rem(-24);
-    left: calc(50% - min(48vw, rem(308)));
+    left: calc(50% - min(48vw, rem(173)));
     z-index: 2;
 
     @include mq(md) {
@@ -40,13 +40,16 @@
     @include mq(md) {
         grid-template-columns: 1fr 1fr;
         column-gap: rem(40);
-        row-gap: rem(85);
+        row-gap: rem(82);
         margin-inline: 0;
     }
 }
 
 .page-blog__pagenavi {
     margin-top: rem(80);
+    @include mq(md){
+       margin-top: rem(76);
+    }
 }
 
 .page-blog__sidebar {
