--- a/src/sass/module/_modal.scss
+++ b/src/sass/module/_modal.scss
@@ -12,7 +12,7 @@
 
   .modal__overlay {
     background: rgba($gray2, 80%);
-    height: 100vh;
+    height: 100dvh;
     position: absolute;
     width: 100%;
 
