--- a/src/sass/module/_mv.scss
+++ b/src/sass/module/_mv.scss
@@ -26,7 +26,7 @@
     text-transform: uppercase;
     font-family: $fourth-font-family;
     font-size: rem(40);
-    font-weight: $normal;
+    font-weight: $regular;
     line-height: calc(48/40);
     letter-spacing: 0.54em;
     color: $white;
