--- a/src/sass/module/_category.scss
+++ b/src/sass/module/_category.scss
@@ -24,8 +24,9 @@
 
 .category__item-text {
     border: 1px solid $green-accent;
-    padding-block: rem(4.5);
     padding-inline: rem(5);
+    padding-top: rem(6);
+    padding-bottom: rem(4);
     font-size: rem(14);
     font-weight: $regular;
     font-family: $base-font-family;
