--- a/src/sass/module/_gallery.scss
+++ b/src/sass/module/_gallery.scss
@@ -1,58 +1,77 @@
 @use "global" as *;
 
+.gallery {
+  position: relative;
+}
+
+.gallery::before {
+  @include mq(md) {
+    content: "";
+    background-image: url(../images/common/fish_3.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: absolute;
+    z-index: 2;
+    width: rem(301);
+    height: rem(138);
+    top: rem(-80);
+    right: calc(50% - min(48vw, rem(640)));
+  }
+}
+
 .gallery__contents {
   display: grid;
   margin-top: rem(40);
-  gap: 8px;
+  gap: rem(8);
   cursor: pointer;
 
   @include mq(md) {
     margin-top: rem(82);
     grid-auto-flow: dense;
     grid-template-columns: 492fr 80fr 492fr;
-    grid-template-rows: rem(369) rem(369) rem(369) rem(369);
+    grid-auto-rows: rem(369);
   }
 }
 
 .gallery__image--1 {
   @include mq(md) {
-    grid-row: 1 / 3;
-    grid-column: 1 / 2;
+    grid-row: span 2;
+    grid-column: span 1;
   }
 }
 
 .gallery__image--2 {
   @include mq(md) {
-    grid-row: 1 / 2;
-    grid-column: 2 / 4;
+    grid-row: span 1;
+    grid-column: 2 / span 2;
   }
 }
 
 .gallery__image--3 {
   @include mq(md) {
-    grid-row: 2 / 3;
-    grid-column: 2 / 4;
+    grid-row: span 1;
+    grid-column: 2 / span 2;
   }
 }
 
 .gallery__image--4 {
   @include mq(md) {
-    grid-row: 3 / 4;
-    grid-column: 1 / 3;
+    grid-row: span 1;
+    grid-column: span 2;
   }
 }
 
 .gallery__image--5 {
   @include mq(md) {
-    grid-row: 4 / 5;
-    grid-column: 1 / 3;
+    grid-row: span 1;
+    grid-column: span 2;
   }
 }
 
 .gallery__image--6 {
   @include mq(md) {
-    grid-row: 3 / 5;
-    grid-column: 3 / 4;
+    grid-row: span 2;
+    grid-column: 3 / span 1;
   }
 }
 
