--- a/src/sass/module/_page-faq.scss
+++ b/src/sass/module/_page-faq.scss
@@ -23,6 +23,12 @@
         left: calc(50% - min(48vw, rem(621)));
     }
 }
+.page-faq__inner.inner {
+    @include mq(md) {
+        max-width: rem(753);
+    }
+
+}
 
 .page-faq__content {
     margin-inline: auto;
