--- a/src/sass/module/_page-price.scss
+++ b/src/sass/module/_page-price.scss
@@ -23,14 +23,17 @@
         left: calc(50% - min(48vw, rem(619)));
     }
 }
-
+.page-price__inner.inner {
+    @include mq(md) {
+        max-width: rem(753);
+    }
+}
 .page-price__contents {
     margin-inline: auto;
     display: grid;
     gap: rem(40);
 
     @include mq(md) {
-        max-width: rem(700);
         gap: rem(75);
     }
 }
