--- a/src/sass/module/_single-blog.scss
+++ b/src/sass/module/_single-blog.scss
@@ -1,38 +1,6 @@
 @use "global" as *;
 
 .single-blog {
-    position: relative;
-}
-
-.single-blog::before {
-    content: "";
-    background-image: url(../images/common/fish_2.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: absolute;
-    width: rem(120);
-    height: rem(55);
-    top: rem(-23);
-    left: calc(50% - min(48vw, rem(308)));
-    z-index: -1;
-
-    @include mq(md) {
-        width: rem(301);
-        height: rem(138);
-        top: rem(-70);
-        left: calc(50% - min(48vw, rem(621)));
-    }
-}
-
-.single-blog__contents {
-    @include mq(md) {
-        display: grid;
-        gap: rem(87);
-        grid-template-columns: 1fr rem(294);
-    }
-}
-
-.single-blog__body {
     @include mq(md) {
         margin-top: rem(-6);
     }
@@ -72,7 +40,7 @@
     }
 }
 
-.single-blog__image img {
+.single-blog__item img {
     aspect-ratio: 345 / 231;
     width: 100%;
     height: 100%;
@@ -91,7 +59,7 @@
     }
 }
 
-.single-blog__lists {
+.single-blog__content p{
     margin-top: rem(24);
 
     @include mq(md) {
@@ -99,16 +67,20 @@
     }
 }
 
-.single-blog__text,
-.single-blog__list {
+.single-blog__content ul {
+    margin-top: rem(24);
+
+    @include mq(md) {
+        margin-top: rem(40);
+    }
+}
+
+.single-blog__content li {
     font-size: rem(16);
     font-weight: $regular;
     font-family: $base-font-family;
     color: $black;
     line-height: calc(24 / 16);
-}
-
-.single-blog__text {
     margin-top: rem(24);
 
     @include mq(md) {
@@ -116,9 +88,14 @@
     }
 }
 
-.single-blog__list {
+.single-blog__content li {
+    font-size: rem(16);
+    font-weight: $regular;
+    font-family: $base-font-family;
+    color: $black;
+    line-height: calc(24 / 16);
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     gap: rem(9);
     justify-content: start;
     margin-top: rem(27);
@@ -128,7 +105,7 @@
     }
 }
 
-.single-blog__list::before {
+.single-blog__content li::before {
     content: "";
     display: inline-block;
     background-repeat: no-repeat;
@@ -136,9 +113,11 @@
     width: rem(18);
     height: rem(18);
     background-image: url(../images/common/hitode-green.png);
+    margin-top: rem(5);
+    flex-shrink: 0;
 }
 
-.single-blog__list:not(:first-child) {
+.single-blog__content li:not(:first-child) {
     margin-top: rem(4);
 }
 
@@ -147,14 +126,6 @@
 
     @include mq(md) {
         margin-top: rem(80);
-    }
-}
-
-.wp-pagenavi--gap {
-    gap: rem(23);
-
-    @include mq(md) {
-        margin-left: rem(-32);
     }
 }
 
