--- a/src/sass/module/_blog.scss
+++ b/src/sass/module/_blog.scss
@@ -54,7 +54,7 @@
         grid-template-columns: repeat(3, 1fr);
     }
 }
-.blog__cards--layout {
+.blog-cards--layout {
     display: grid;
     gap: rem(40);
     margin-inline: rem(6);
