--- a/src/sass/module/_accordion.scss
+++ b/src/sass/module/_accordion.scss
@@ -41,7 +41,7 @@
     width: rem(28);
     height: rem(1);
     background-color: $white;
-    transform: rotate(90deg);
+    transform: rotate(0);
     transition: all .3s ease-in-out;
 
     @include mq(md) {
@@ -53,7 +53,7 @@
 .accordion__header::after {
     position: absolute;
     content: "";
-    top: 48%;
+    top: 50%;
     right: rem(16);
     width: rem(28);
     height: rem(1);
@@ -67,11 +67,7 @@
 }
 
 .accordion__header.is-open::before {
-    transform: rotate(180deg);
-}
-
-.accordion__header.is-open::after {
-    opacity: 0;
+    transform: rotate(90deg);
 }
 
 .accordion__content {
