--- a/src/sass/module/_page-contact.scss
+++ b/src/sass/module/_page-contact.scss
@@ -25,7 +25,7 @@
 }
 .page-contact__inner.inner {
     @include mq(md){
-        max-width: rem(753);
+        max-width: rem(750);
     }
 }
 
@@ -46,7 +46,7 @@
     margin-top: rem(24);
 
     @include mq(md) {
-        margin-top: rem(15);
+        margin-top: rem(40);
     }
 }
 
@@ -63,7 +63,6 @@
 
     @include mq(md) {
         align-items: baseline;
-        margin-top: rem(20);
     }
 }
 
@@ -109,7 +108,7 @@
     margin-top: rem(16);
 
     @include mq(md) {
-        margin-top: rem(24);
+        margin-top: 0;
     }
 }
 
@@ -133,17 +132,13 @@
     pointer-events: none;
 
     @include mq(md) {
-        top: rem(17);
+        top: 10%;
     }
 }
 
 .page-contact__select {
     font-size: rem(12);
     padding-left: rem(7);
-
-    @include mq(md) {
-        margin-top: rem(15);
-    }
 }
 
 .page-contact__select:invalid {
@@ -163,7 +158,7 @@
     padding: rem(8) rem(16);
 
     @include mq(md) {
-        margin-top: rem(22);
+        margin-top: 0;
     }
 }
 
@@ -178,7 +173,7 @@
     gap: rem(4);
 
     @include mq(md) {
-        margin-top: rem(25);
+        margin-top: 0;
     }
 }
 
