--- a/src/sass/module/_page-price.scss
+++ b/src/sass/module/_page-price.scss
@@ -25,7 +25,7 @@
 }
 .page-price__inner.inner {
     @include mq(md) {
-        max-width: rem(753);
+        max-width: rem(750);
     }
 }
 .page-price__contents {
@@ -105,16 +105,15 @@
     font-family: $base-font-family;
     color: $green;
     line-height: calc(24 / 16);
-    height: rem(60);
-
+    min-height: rem(60);
+    padding: rem(6);
     @include mq(md) {
-        height: rem(58);
+        min-height: rem(58);
     }
 }
 
 .page-price__list {
     text-align: center;
-    border-right: 1px solid $green-accent;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -130,5 +129,7 @@
     display: flex;
     align-items: center;
     justify-content: end;
-    padding-top: 0;
+    padding-top: rem(10);
+    border-left: 1px solid $green-accent;
+    height: 100%;
 }
