--- a/src/sass/module/_single-blog.scss
+++ b/src/sass/module/_single-blog.scss
@@ -32,7 +32,7 @@
     }
 }
 
-.single-blog__item {
+.single-blog__image {
     margin-top: rem(23);
 
     @include mq(md) {
@@ -40,7 +40,8 @@
     }
 }
 
-.single-blog__item img {
+.single-blog__image img,
+.single-blog__container img {
     aspect-ratio: 345 / 231;
     width: 100%;
     height: 100%;
@@ -51,7 +52,7 @@
     }
 }
 
-.single-blog__content {
+.single-blog__container {
     margin-top: rem(24);
 
     @include mq(md) {
@@ -59,7 +60,7 @@
     }
 }
 
-.single-blog__content p{
+.single-blog__container  > :not(:first-child) {
     margin-top: rem(24);
 
     @include mq(md) {
@@ -67,28 +68,7 @@
     }
 }
 
-.single-blog__content ul {
-    margin-top: rem(24);
-
-    @include mq(md) {
-        margin-top: rem(40);
-    }
-}
-
-.single-blog__content li {
-    font-size: rem(16);
-    font-weight: $regular;
-    font-family: $base-font-family;
-    color: $black;
-    line-height: calc(24 / 16);
-    margin-top: rem(24);
-
-    @include mq(md) {
-        margin-top: rem(40);
-    }
-}
-
-.single-blog__content li {
+.single-blog__container li {
     font-size: rem(16);
     font-weight: $regular;
     font-family: $base-font-family;
@@ -105,7 +85,7 @@
     }
 }
 
-.single-blog__content li::before {
+.single-blog__container li::before {
     content: "";
     display: inline-block;
     background-repeat: no-repeat;
@@ -117,7 +97,7 @@
     flex-shrink: 0;
 }
 
-.single-blog__content li:not(:first-child) {
+.single-blog__container li:not(:first-child) {
     margin-top: rem(4);
 }
 
