--- a/src/sass/module/_gallery.scss
+++ b/src/sass/module/_gallery.scss
@@ -33,45 +33,18 @@
   }
 }
 
-.gallery__image--1 {
+.gallery__image:nth-child(6n+1),
+.gallery__image:nth-child(6n+6){
   @include mq(md) {
     grid-row: span 2;
     grid-column: span 1;
   }
 }
 
-.gallery__image--2 {
-  @include mq(md) {
-    grid-row: span 1;
-    grid-column: 2 / span 2;
-  }
-}
-
-.gallery__image--3 {
-  @include mq(md) {
-    grid-row: span 1;
-    grid-column: 2 / span 2;
-  }
-}
-
-.gallery__image--4 {
+.gallery__image {
   @include mq(md) {
     grid-row: span 1;
     grid-column: span 2;
-  }
-}
-
-.gallery__image--5 {
-  @include mq(md) {
-    grid-row: span 1;
-    grid-column: span 2;
-  }
-}
-
-.gallery__image--6 {
-  @include mq(md) {
-    grid-row: span 2;
-    grid-column: 3 / span 1;
   }
 }
 
