--- a/src/sass/module/_gallery.scss
+++ b/src/sass/module/_gallery.scss
@@ -52,9 +52,12 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.gallery__image {
   transition: 0.3s;
 }
 
-.gallery__contents img:hover {
-  opacity: 0.6;
-}
+ .gallery__image:hover {
+   opacity: 0.6;
+ }
