--- a/src/sass/module/_modal.scss
+++ b/src/sass/module/_modal.scss
@@ -1,41 +1,48 @@
 @use "global" as *;
 
-  .modal {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    z-index: 2000;
-  }
+.modal {
+  background: rgba($gray2, 80%);
+  display: none;
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2000;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.3s ease, visibility 0.3s ease;
+}
 
-  .modal__overlay {
-    background: rgba($gray2, 80%);
-    height: 100dvh;
-    position: absolute;
-    width: 100%;
+.modal.is-open {
+  visibility: visible;
+  /* 表示状態 */
+  opacity: 1;
+  /* 完全に不透明 */
+}
 
+.modal__image img {
+  opacity: 1;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: 0;
+  width: 100%;
+  margin: auto;
+  max-height: 50%;
+  max-width: 90%;
+  object-fit: contain;
+  position: absolute;
+  @include mq(md){
+    max-height: 90%;
+    max-width: 64%;
   }
-  .modal__content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    max-width: rem(720);
-    width: 100vw;
-    height: auto;
-    opacity: 1;
-  }
+}
 
-  .modal__image {
-    width: 100%;
-    height: auto;
-    opacity: 0;
-    transition: opacity 0.5s ease;
-  }
-
-  .no-scroll {
-    overflow: hidden;
-    height: 100vh;
-  }
+.no-scroll {
+  overflow: hidden;
+  height: 100dvh;
+}
