--- a/src/sass/module/_single-blog.scss
+++ b/src/sass/module/_single-blog.scss
@@ -60,6 +60,14 @@
     }
 }
 
+.single-blog__container p {
+    font-size: rem(16);
+    font-weight: $regular;
+    font-family: $base-font-family;
+    color: $green;
+    line-height: calc(24  / 16);
+}
+
 .single-blog__container  > :not(:first-child) {
     margin-top: rem(24);
 
@@ -72,7 +80,7 @@
     font-size: rem(16);
     font-weight: $regular;
     font-family: $base-font-family;
-    color: $black;
+    color: $green;
     line-height: calc(24 / 16);
     display: flex;
     align-items: flex-start;
