--- a/src/sass/module/_page-contact.scss
+++ b/src/sass/module/_page-contact.scss
@@ -25,7 +25,7 @@
 }
 .page-contact__inner.inner {
     @include mq(md){
-        max-width: rem(750);
+        max-width: 700px + strip-unit($padding-pc) * 2;
     }
 }
 
