--- a/src/sass/module/_page-price.scss
+++ b/src/sass/module/_page-price.scss
@@ -25,7 +25,7 @@
 }
 .page-price__inner.inner {
     @include mq(md) {
-        max-width: rem(750);
+        max-width: 700px + strip-unit($padding-pc) * 2;
     }
 }
 .page-price__contents {
